In do_open a FILE object is created by fopen() call, then the fileno() is pulled out and saved for later use and the FILE is leaked. There should be dup() called on the fd and the FILE should be properly fclosed to avoid this leak.
Description
Description
Revisions and Commits
Revisions and Commits
| rG GnuPG | |||
| rGf1561e5196e5 tools: Fix FILE memory leak in gpg-connect-agent. | |||
| rG378719f25fe0 tools: Fix FILE memory leak in gpg-connect-agent. | |||